fix: spinners visible after graphs are loaded

--- a/assets/style.css
+++ b/assets/style.css
@@ -400,7 +400,7 @@ body {
   position: relative;
 }
 
-.graph::before {
+.graph.loading::before {
   content: '';
   position: absolute;
   top: 50%;
